Made a weird  moving mandala pattern

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body onload="main()">
-		
+		<canvas id="three-canvas"></canvas>
 	</body>
 </html>
